--- a/style.css
+++ b/style.css
@@ -1,5 +1,84 @@
+/* google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+/* shared style start */
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+  border: 3px solid red;
+}
+/* shared style end */
+
+/* nav bar start */
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 3px solid red;
+}
+.nav-logo {
+  width: 135px;
+  height: 82px;
+}
+.nav-item ul {
+  display: flex;
+  gap: 48px;
+  border: 2px solid green;
+}
+.nav-item li {
+  list-style: none;
+}
+.nav-item a {
+  text-decoration: none;
+  color: #8987a1;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+.nav-item .home {
+  color: #252432;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+a:active {
+  color: #252432;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+.nav-cart {
+  display: flex;
+  gap: 10px;
+}
+.nav-cart img {
+  width: 24px;
+  height: 24px;
+}
+.nav-cart .nav-cart-text {
+  color: #000;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+/* nav bar end */
+
+/* responsive for mobile start */
+@media screen and (max-width: 576px) {
+  .nav-item {
+    display: none;
+  }
+}
+/* responsive for mobile end */
