--- a/style.css
+++ b/style.css
@@ -212,6 +212,47 @@ a:active {
 }
 /* flower and plants sectin end */
 
+/* bunch section start */
+.bunch-text {
+  background-image: url("./assets/news-letter-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 533px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.bunch-input {
+  display: flex;
+  margin-top: 23px;
+}
+.bunch-input input {
+  width: 644px;
+  height: 50px;
+  padding: 8px 20px;
+  border: none;
+}
+.bunch-input button {
+  width: 186px;
+  height: 50px;
+  background: #e95a08;
+  border: none;
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 600;
+}
+.bunch-text .bunch-text-title {
+  color: #fff;
+  text-align: center;
+  font-family: "Noto Serif";
+  font-size: 50px;
+  font-weight: 700;
+}
+/* bunch section end */
+
 /* responsive for mobile start */
 @media screen and (max-width: 576px) {
   /* nav bar start */
