--- a/style.css
+++ b/style.css
@@ -241,7 +241,6 @@ a:active {
   grid-template-rows: repeat(2, 1fr);
   padding-top: 100px;
   gap: 20px;
-  position: relative;
 }
 .img-1 {
   grid-column: 1 / span 2;
@@ -258,56 +257,46 @@ a:active {
 .latest-images img {
   width: 100%;
   height: 100%;
-  border-radius: 20px;
+  border-radius: 10px;
+}
+
+.image-box {
+  position: relative;
+  /* width: 250px;
+  height: 150px; */
+  border-radius: 12px;
 }
 .img-text {
-  position: relative;
-  border: 3px solid red;
-  display: flex;
-  flex-direction: column;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .img-text .p {
-  position: absolute;
-  top: -130px;
-  color: #fff;
-  text-align: center;
-  font-family: "Noto Serif";
-  font-size: 20px;
-  font-weight: 700;
-}
-.img-text a {
-  position: absolute;
-  top: -90px;
   color: #fff;
   text-align: center;
   font-family: "Noto Serif";
   font-size: 16px;
   font-weight: 700;
+  border: 3px solid red;
 }
-/* .img-text {
-  position: absolute;
-}
-.img-text p {
+.img-text .par {
   color: #fff;
   text-align: center;
   font-family: "Noto Serif";
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 700;
 }
 .img-text a {
   color: #fff;
-  font-family: Inter;
+  text-align: center;
+  font-family: "Noto Serif";
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 700;
   display: flex;
   justify-content: center;
-  padding-top: 26px;
-} */
-
-/*  */
+  padding-top: 15px;
+}
 
 /* latest section end */
 
@@ -576,27 +565,9 @@ a:active {
     height: 100%;
     border-radius: 20px;
   }
-  /* .img-text {
-  position: absolute;
-}
-.img-text p {
-  color: #fff;
-  text-align: center;
-  font-family: "Noto Serif";
-  font-size: 20px;
-  font-weight: 700;
-}
-.img-text a {
-  color: #fff;
-  font-family: Inter;
-  font-size: 16px;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  padding-top: 26px;
-} */
-
-  /*  */
+  .img-text .par {
+    font-size: 16px;
+  }
 
   /* latest section end */
 
